// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Markdown heading should render heading1 correctly 1`] = `
<View
  style={Object {}}
>
  <Text
    inMessage={false}
    level={1}
    style={
      Array [
        Object {
          "color": "#000",
          "fontSize": 27,
          "lineHeight": 32,
        },
        Object {},
      ]
    }
  >
    A simple heading1
  </Text>
</View>
`;

exports[`Markdown heading should render heading2 correctly 1`] = `
<View
  style={Object {}}
>
  <Text
    inMessage={false}
    level={2}
    style={
      Array [
        Object {
          "color": "#000",
          "fontSize": 24,
          "lineHeight": 27,
        },
        Object {},
      ]
    }
  >
    A simple heading2
  </Text>
</View>
`;

exports[`Markdown heading should render heading3 correctly 1`] = `
<View
  style={Object {}}
>
  <Text
    inMessage={false}
    level={3}
    style={
      Array [
        Object {
          "color": "#000",
          "fontSize": 21,
          "lineHeight": 22,
        },
        Object {},
      ]
    }
  >
    A simple heading3
  </Text>
</View>
`;

exports[`Markdown list should render ordered list correctly 1`] = `
<View
  style={Object {}}
>
  <View
    style={
      Array [
        Object {},
        Object {},
      ]
    }
  >
    <Text
      inMessage={false}
      markdown={true}
      style={
        Array [
          Object {
            "color": "#000",
            "fontFamily": "System",
            "fontSize": 16,
          },
          Object {},
        ]
      }
      uppercase={false}
    >
      A 
    </Text>
    <Text
      inMessage={false}
      markdown={true}
      style={
        Array [
          Object {
            "color": "#000",
            "fontFamily": "System",
            "fontSize": 16,
          },
          Object {},
        ]
      }
      uppercase={false}
    >
      simple 
    </Text>
    <Text
      inMessage={false}
      markdown={true}
      style={
        Array [
          Object {
            "color": "#000",
            "fontFamily": "System",
            "fontSize": 16,
          },
          Object {},
        ]
      }
      uppercase={false}
    >
      ordered 
    </Text>
    <Text
      inMessage={false}
      markdown={true}
      style={
        Array [
          Object {
            "color": "#000",
            "fontFamily": "System",
            "fontSize": 16,
          },
          Object {},
        ]
      }
      uppercase={false}
    >
      list
    </Text>
    <Text
      inMessage={false}
      markdown={true}
      style={
        Array [
          Object {
            "color": "#000",
            "fontFamily": "System",
            "fontSize": 16,
          },
          Object {},
        ]
      }
      uppercase={false}
    >
      : 
    </Text>
    <Text
      inMessage={false}
      markdown={true}
      style={
        Array [
          Object {
            "color": "#000",
            "fontFamily": "System",
            "fontSize": 16,
          },
          Object {},
        ]
      }
      uppercase={false}
    >
      1
    </Text>
    <Text
      inMessage={false}
      markdown={true}
      style={
        Array [
          Object {
            "color": "#000",
            "fontFamily": "System",
            "fontSize": 16,
          },
          Object {},
        ]
      }
      uppercase={false}
    >
      . 
    </Text>
    <Text
      inMessage={false}
      markdown={true}
      style={
        Array [
          Object {
            "color": "#000",
            "fontFamily": "System",
            "fontSize": 16,
          },
          Object {},
        ]
      }
      uppercase={false}
    >
      Vue 
    </Text>
    <Text
      inMessage={false}
      markdown={true}
      style={
        Array [
          Object {
            "color": "#000",
            "fontFamily": "System",
            "fontSize": 16,
          },
          Object {},
        ]
      }
      uppercase={false}
    >
      2
    </Text>
    <Text
      inMessage={false}
      markdown={true}
      style={
        Array [
          Object {
            "color": "#000",
            "fontFamily": "System",
            "fontSize": 16,
          },
          Object {},
        ]
      }
      uppercase={false}
    >
      . 
    </Text>
    <Text
      inMessage={false}
      markdown={true}
      style={
        Array [
          Object {
            "color": "#000",
            "fontFamily": "System",
            "fontSize": 16,
          },
          Object {},
        ]
      }
      uppercase={false}
    >
      React 
    </Text>
    <Text
      inMessage={false}
      markdown={true}
      style={
        Array [
          Object {
            "color": "#000",
            "fontFamily": "System",
            "fontSize": 16,
          },
          Object {},
        ]
      }
      uppercase={false}
    >
      3
    </Text>
    <Text
      inMessage={false}
      markdown={true}
      style={
        Array [
          Object {
            "color": "#000",
            "fontFamily": "System",
            "fontSize": 16,
          },
          Object {},
        ]
      }
      uppercase={false}
    >
      . 
    </Text>
    <Text
      inMessage={false}
      markdown={true}
      style={
        Array [
          Object {
            "color": "#000",
            "fontFamily": "System",
            "fontSize": 16,
          },
          Object {},
        ]
      }
      uppercase={false}
    >
      Angular
    </Text>
  </View>
</View>
`;

exports[`Markdown list should render unordered list correctly 1`] = `
<View
  style={Object {}}
>
  <View
    style={
      Array [
        Object {},
        Object {},
      ]
    }
  >
    <Text
      inMessage={false}
      markdown={true}
      style={
        Array [
          Object {
            "color": "#000",
            "fontFamily": "System",
            "fontSize": 16,
          },
          Object {},
        ]
      }
      uppercase={false}
    >
      A 
    </Text>
    <Text
      inMessage={false}
      markdown={true}
      style={
        Array [
          Object {
            "color": "#000",
            "fontFamily": "System",
            "fontSize": 16,
          },
          Object {},
        ]
      }
      uppercase={false}
    >
      simple 
    </Text>
    <Text
      inMessage={false}
      markdown={true}
      style={
        Array [
          Object {
            "color": "#000",
            "fontFamily": "System",
            "fontSize": 16,
          },
          Object {},
        ]
      }
      uppercase={false}
    >
      unordered 
    </Text>
    <Text
      inMessage={false}
      markdown={true}
      style={
        Array [
          Object {
            "color": "#000",
            "fontFamily": "System",
            "fontSize": 16,
          },
          Object {},
        ]
      }
      uppercase={false}
    >
      list
    </Text>
    <Text
      inMessage={false}
      markdown={true}
      style={
        Array [
          Object {
            "color": "#000",
            "fontFamily": "System",
            "fontSize": 16,
          },
          Object {},
        ]
      }
      uppercase={false}
    >
      : 
    </Text>
    <Text
      inMessage={false}
      markdown={true}
      style={
        Array [
          Object {
            "color": "#000",
            "fontFamily": "System",
            "fontSize": 16,
          },
          Object {},
        ]
      }
      uppercase={false}
    >
      
    </Text>
    <Text
      inMessage={false}
      markdown={true}
      style={
        Array [
          Object {
            "color": "#000",
            "fontFamily": "System",
            "fontSize": 16,
          },
          Object {},
        ]
      }
      uppercase={false}
    >
      * 
    </Text>
    <Text
      inMessage={false}
      markdown={true}
      style={
        Array [
          Object {
            "color": "#000",
            "fontFamily": "System",
            "fontSize": 16,
          },
          Object {},
        ]
      }
      uppercase={false}
    >
      Vue 
    </Text>
    <Text
      inMessage={false}
      markdown={true}
      style={
        Array [
          Object {
            "color": "#000",
            "fontFamily": "System",
            "fontSize": 16,
          },
          Object {},
        ]
      }
      uppercase={false}
    >
      
    </Text>
    <Text
      inMessage={false}
      markdown={true}
      style={
        Array [
          Object {
            "color": "#000",
            "fontFamily": "System",
            "fontSize": 16,
          },
          Object {},
        ]
      }
      uppercase={false}
    >
      * 
    </Text>
    <Text
      inMessage={false}
      markdown={true}
      style={
        Array [
          Object {
            "color": "#000",
            "fontFamily": "System",
            "fontSize": 16,
          },
          Object {},
        ]
      }
      uppercase={false}
    >
      React 
    </Text>
    <Text
      inMessage={false}
      markdown={true}
      style={
        Array [
          Object {
            "color": "#000",
            "fontFamily": "System",
            "fontSize": 16,
          },
          Object {},
        ]
      }
      uppercase={false}
    >
      
    </Text>
    <Text
      inMessage={false}
      markdown={true}
      style={
        Array [
          Object {
            "color": "#000",
            "fontFamily": "System",
            "fontSize": 16,
          },
          Object {},
        ]
      }
      uppercase={false}
    >
      * 
    </Text>
    <Text
      inMessage={false}
      markdown={true}
      style={
        Array [
          Object {
            "color": "#000",
            "fontFamily": "System",
            "fontSize": 16,
          },
          Object {},
        ]
      }
      uppercase={false}
    >
      Angular
    </Text>
  </View>
</View>
`;

exports[`Markdown paragraph should render paragraph correctly 1`] = `
<View
  style={Object {}}
>
  <View
    style={
      Array [
        Object {},
        Object {},
      ]
    }
  >
    <Text
      inMessage={false}
      markdown={true}
      style={
        Array [
          Object {
            "color": "#000",
            "fontFamily": "System",
            "fontSize": 16,
          },
          Object {},
        ]
      }
      uppercase={false}
    >
      A 
    </Text>
    <Text
      inMessage={false}
      markdown={true}
      style={
        Array [
          Object {
            "color": "#000",
            "fontFamily": "System",
            "fontSize": 16,
          },
          Object {},
        ]
      }
      uppercase={false}
    >
      simple 
    </Text>
    <Text
      inMessage={false}
      markdown={true}
      style={
        Array [
          Object {
            "color": "#000",
            "fontFamily": "System",
            "fontSize": 16,
          },
          Object {},
        ]
      }
      uppercase={false}
    >
      paragraph
    </Text>
    <Text
      inMessage={false}
      markdown={true}
      style={
        Array [
          Object {
            "color": "#000",
            "fontFamily": "System",
            "fontSize": 16,
          },
          Object {},
        ]
      }
      uppercase={false}
    >
      .
    </Text>
  </View>
</View>
`;
